server.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serverservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: serverservice
  replicas: 1
  template:
    metadata:
      labels:
        app: serverservice
    spec:
      restartPolicy: Always
      containers:
      - name: serverservice
        image: mastercloudapps/server:v1.23
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: serverservice
  labels:
    app: serverservice
spec:
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30000
    protocol: TCP
    name: serverservice-port
  selector:
    app: serverservice
  type: NodePort
