server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /cluster-ip
            pathType: Prefix
            backend:
              service:
                name: serverservice
                port:
                  number: 8080
