toposervice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toposervice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /cluster-ip/toposervice/(.*)
            pathType: Prefix
            backend:
              service:
                name: toposervice
                port:
                  number: 8181
